fix: set very small image width on mobile

--- a/src/assets/landing.css
+++ b/src/assets/landing.css
@@ -133,6 +133,7 @@
 	[data-has-hero] .hero img {
         display: none;
         aspect-ratio: 1.74;
+        width: 10px;
     }
 
     [data-has-hero] .header .right-group {
